[package]
name = "pkagent"
version = "0.4.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hostname = "0.3"
sysinfo = "0.30"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
base64 = "0.22"
sha2 = "0.10"
nix = { version = "0.28", features = ["user", "fs"] }
